# zella-py

./: .gitignore  LICENSE.md  README.md  pyproject.toml
examples/: main.py
src/: __init__.py
src/zella/: __init__.py  _client.py  config.py
src/zella/resources/: __init__.py
src/zella/resources/callbacks/: __init__.py  langchain_callback.py
src/zella/resources/chat/: chat.py  completions.py
src/zella/resources/completions/: completions.py
src/zella/resources/embedding/: embedding.py
src/zella/resources/logger/: log_consumer.py  logger.py
src/zella/resources/prompt/: prompt.py
