[project]
name = "zella"
dynamic = ["version"]
authors = [
  { name="Team Zella", email="dev@zella.ai" }
]
description = "Python SDK for accessing Zella AI for building AI apps"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "httpx>=0.25"
]

[tool.setuptools.dynamic]
version = {attr = "zella.version.VERSION"}

[project.urls]
Homepage = "https://github.com/ZellaAI/zella-py"
Issues = "https://github.com/ZellaAI/zella-py/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"